タグミス修正 Qiita_Engineer_Festa -> QiitaEngineerFesta2024

--- a/public/b478340d3d3d05370710.md
+++ b/public/b478340d3d3d05370710.md
@@ -4,7 +4,7 @@ tags:
   - ポエム
   - 所信表明
   - AIイラスト
-  - Qiita_Engineer_Festa
+  - QiitaEngineerFesta2024
 private: false
 updated_at: '2024-07-02T05:42:50+09:00'
 id: b478340d3d3d05370710
