--- a/public/fc4df42ef09a48a72d12.md
+++ b/public/fc4df42ef09a48a72d12.md
@@ -1,5 +1,5 @@
 ---
-title: 【ルール・仕様検証】アドカレ完走ユーザーがQiitaEngineerFesta初参加で色々気になることを検証するだけ・２
+title: 記事投稿時にフェスタ・アドカレのテーマに登録し忘れた？それ、後から編集で追加しても大丈夫だよ！
 tags:
   - QiitaEngineerFesta2024
 private: false
