--- a/public/331ad07e5ccabd326864.md
+++ b/public/331ad07e5ccabd326864.md
@@ -1,5 +1,5 @@
 ---
-title: 【ルール・仕様検証】アドカレ完走ユーザーがQiitaEngineerFesta初参加で色々気になることを検証するだけ
+title: QiitaEngineerFestaとアドベントカレンダーの記事投稿によるバッジのもらい方の違いを徹底検証！
 tags:
   - 検証
   - QiitaEngineerFesta2024
