--- a/public/34f71344767094e39603.md
+++ b/public/34f71344767094e39603.md
@@ -9,7 +9,7 @@ tags:
 private: false
 updated_at: '2024-07-06T09:13:21+09:00'
 id: 34f71344767094e39603
-organization_url_name: null
+organization_url_name: linuc
 slide: false
 ignorePublish: false
 ---
@@ -19,7 +19,7 @@ ignorePublish: false
 :::
 
 ## 結論
-インフラの需要がますます上がってるぞ！
+スキルとは、資格＋実務経験をどれだけ現場にコミットできるか、である
 
 ## インフラの知識・技術があると嬉しいこと
 - Webアプリを作るスクールが多いが、サーバーの知識がないままにアプリを作る勉強しかしていないので、差別化を図りやすい
