--- a/public/fc290094364e00664656.md
+++ b/public/fc290094364e00664656.md
@@ -118,3 +118,8 @@ https://www.amazon.co.jp/10%E5%80%8D%E9%80%9F%E3%81%A7%E6%88%90%E6%9E%9C%E3%81%8
 ※アフィリエイトコードは貼ってません
 
 ---
+## 
+
+---
+## 特になんでもない話
+このスライドのQiitaIDがfc2〜になってる事に気付いて思わず噴きました（笑いを）
