--- a/public/840f529481fec2da744f.md
+++ b/public/840f529481fec2da744f.md
@@ -1,7 +1,10 @@
 ---
 title: エンジニア転職フェア(type転職フェア)に参加してきた話
 tags:
-  - QiitaCLI
+  - レビュー
+  - 転職
+  - セミナー
+  - リアル
 private: false
 updated_at: '2024-07-16T11:49:58+09:00'
 id: 840f529481fec2da744f
